--- a/Deep Learning/Tensorflow Object Detection/Tensorflow Object Detection (5 Hours Course Nicholas Renotte)/TFODCourse/2. Training and Detection.ipynb
+++ b/Deep Learning/Tensorflow Object Detection/Tensorflow Object Detection (5 Hours Course Nicholas Renotte)/TFODCourse/2. Training and Detection.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "id": "HR-TfDGrpfDC"
    },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "id": "K-Cmz2edpfDE",
     "scrolled": true
@@ -120,7 +120,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: wget in d:\\youtube\\od\\tfodcourse\\tfod\\lib\\site-packages (3.2)\n"
+      "Requirement already satisfied: wget in c:\\users\\damit\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (3.2)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Value for scheme.headers does not match. Please report this to <https://github.com/pypa/pip/issues/9617>\n",
+      "distutils: c:\\users\\damit\\appdata\\local\\programs\\python\\python37\\Include\\UNKNOWN\n",
+      "sysconfig: c:\\users\\damit\\appdata\\local\\programs\\python\\python37\\Include\n",
+      "WARNING: Additional context:\n",
+      "user = False\n",
+      "home = None\n",
+      "root = None\n",
+      "prefix = None\n",
+      "WARNING: Ignoring invalid distribution -xml (c:\\users\\damit\\appdata\\local\\programs\\python\\python37\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -xml (c:\\users\\damit\\appdata\\local\\programs\\python\\python37\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -xml (c:\\users\\damit\\appdata\\local\\programs\\python\\python37\\lib\\site-packages)\n",
+      "WARNING: Error parsing requirements for protobuf: [Errno 2] No such file or directory: 'c:\\\\users\\\\damit\\\\appdata\\\\local\\\\programs\\\\python\\\\python37\\\\lib\\\\site-packages\\\\protobuf-3.14.0.dist-info\\\\METADATA'\n",
+      "WARNING: Error parsing requirements for numpy: [Errno 2] No such file or directory: 'c:\\\\users\\\\damit\\\\appdata\\\\local\\\\programs\\\\python\\\\python37\\\\lib\\\\site-packages\\\\numpy-1.20.2.dist-info\\\\METADATA'\n",
+      "WARNING: Value for scheme.headers does not match. Please report this to <https://github.com/pypa/pip/issues/9617>\n",
+      "distutils: c:\\users\\damit\\appdata\\local\\programs\\python\\python37\\Include\\UNKNOWN\n",
+      "sysconfig: c:\\users\\damit\\appdata\\local\\programs\\python\\python37\\Include\n",
+      "WARNING: Additional context:\n",
+      "user = False\n",
+      "home = None\n",
+      "root = None\n",
+      "prefix = None\n",
+      "WARNING: Ignoring invalid distribution -xml (c:\\users\\damit\\appdata\\local\\programs\\python\\python37\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -xml (c:\\users\\damit\\appdata\\local\\programs\\python\\python37\\lib\\site-packages)\n"
      ]
     }
    ],
@@ -129,6 +158,13 @@
     "    !pip install wget\n",
     "    import wget"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
